deploy-k8s.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: tasky-deployment
  labels:
    app: tasky
spec:
  replicas: 1
  selector:
    matchLabels:
      app: tasky
  template:
    metadata:
      labels:
        app: tasky
    spec:
      serviceAccountName: tasky-sa
      containers:
      - name: tasky
        #image: tssingkofer/tasky:latest
        image: ghcr.io/tssingkofer/tasky:latest
        ports:
        - containerPort: 8080 
        resources:
          requests:
            memory: "1024Mi"
            cpu: "1"
          limits:
            memory: "1024Mi"
            cpu: "1"
---
apiVersion: v1
kind: Service
metadata:
  name: tasky-service
  labels:
    app: tasky
spec:
  type: NodePort 
  selector:
    app: tasky
  ports:
    - protocol: TCP
      port: 80   
      targetPort: 8080 
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: tasky-ingress
spec:
  rules:
  - http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: tasky-service
            port:
              number: 80
